finish alfa 0.1